@@ -157,7 +157,7 @@ OP_BAND,/*A B C	R(A) := RK(B) & RK(C)				*/
 OP_BOR,/*	A B C	R(A) := RK(B) | RK(C)				*/
 OP_BSHL,/*A B C	R(A) := RK(B) << RK(C)			*/
 OP_BSHR,/*A B C	R(A) := RK(B) >> RK(C)			*/
-OP_POW,/*	A B C	R(A) := RK(B) ^ RK(C)				*/
+OP_XOR,/*	A B C	R(A) := RK(B) ^ RK(C)				*/
 OP_UNM,/*	A B	R(A) := -R(B)					*/
 OP_NOT,/*	A B	R(A) := not R(B)				*/
 
